# rand_bin32

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
src/: lib.rs  main.rs
www/: index.html
www/css/: style.css
www/js/: app.js
